# CS236-project2

./: AddAutomaton.h  Automaton.h  BadBlockCommentAutomaton.h  BadStringAutomaton.h  BlockCommentAutomaton.h  CMakeLists.txt  CommaAutomaton.h  CommentAutomaton.h  DatalogProgram.cpp  DatalogProgram.h  FactsAutomaton.h  IDAutomaton.h  LeftParenAutomaton.h  Lexer.cpp  Lexer.h  MultiplyAutomaton.h  Parameter.h  Parser.cpp  Parser.h  PeriodAutomaton.h  Predicate.h  QMarkAutomaton.h  QueriesAutomaton.h  RightParenAutomaton.h  Rule.cpp  Rule.h  RulesAutomaton.h  SchemesAutomaton.h  StringAutomaton.h  Token.cpp  Token.h  input.txt  lab2  main.cpp  makefile
